Revert "fix(Portfolio): fix horizontal scrolling"
This reverts commit e6f710c35d05575b61806575e22bda0300d98998.

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -155,9 +155,6 @@
         display: flex;
         flex-direction: column;
         padding-top: 60px;
-        overflow-x: hidden;
-        max-width: 100vw;
-        box-sizing: border-box;
 
         .text-zone {
             position: relative !important;
@@ -169,20 +166,26 @@
             box-sizing: border-box;
             order: 1;
         }
-    }
-}
 
-@media screen and (max-width: 768px) {
-    .about-page {
-        padding-top: 50px;
+        // Target the SkillsSphere container
+        > div[style*="position: absolute"] {
+            position: relative !important;
+            width: 100% !important;
+            height: auto !important;
+            min-height: 400px;
+            top: auto !important;
+            right: auto !important;
+            left: auto !important;
+            margin: 30px auto 20px auto !important;
+            padding-top: 0 !important;
+            order: 2;
 
-        .text-zone {
-            h1 {
-                font-size: 45px !important;
-            }
-
-            p {
-                font-size: 13px !important;
+            // Target the scene div inside
+            > div {
+                width: 100% !important;
+                max-width: 400px;
+                height: 400px !important;
+                margin: 0 auto;
             }
         }
     }
@@ -201,6 +204,16 @@
 
             p {
                 font-size: 12px !important;
+            }
+        }
+
+        // Smaller sphere on mobile
+        > div[style*="position: absolute"] {
+            min-height: 300px;
+
+            > div {
+                max-width: 300px !important;
+                height: 300px !important;
             }
         }
     }
