--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,7 +1,5 @@
 .home-page {
-    overflow-x: hidden;
-    max-width: 100vw;
-
+    
     .text-zone {
         position: absolute;
         left: 10%;
