--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -2,8 +2,6 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    overflow-x: hidden;
-    max-width: 100vw;
 }
 
 .top-tags {
@@ -38,8 +36,6 @@
     transform-style: preserve-3d;
     animation: fadeIn 1s forwards;
     animation-delay: 1s;
-    overflow-x: hidden;
-    max-width: 100vw;
 }
 
 .container.about-page,
